<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_onBoarding"
        android:layout_width="306.29dp"
        android:layout_height="216dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_tv"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_onBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:letterSpacing="-0.03"
        android:lineHeight="46dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/onboarding_1"
        android:textColor="#3C3A36"
        android:textSize="40sp"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv_onBoardingDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="2sp"
        android:text="@string/onBoardingDesc_1"
        android:textColor="#3C3A36"
        android:textSize="16sp"
        android:translationY="-1sp" />

</LinearLayout>